--- a/package.json
+++ b/package.json
@@ -3,17 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-  "test": "echo \"Error: no test specified\" && exit 1",
-  "seed": "ts-node prisma/seed.ts",
-  "build": "rimraf dist && tsc",
-  "start": "node dist/index.js",
-  "dev": "concurrently \"npx tsc -w\" \"nodemon --exec ts-node src/index.ts\"",
-  "postinstall": "prisma generate",                    
-  "migrate:deploy": "prisma migrate deploy"            
-},
-"prisma": {
-  "seed": "ts-node prisma/seed.ts"
-},
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "seed": "ts-node prisma/seed.ts",
+    "build": "rimraf dist && tsc",
+    "start": "node dist/src/index.js",
+    "dev": "concurrently \"npx tsc -w\" \"nodemon --exec ts-node src/index.ts\""
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
