--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,39 +1,18 @@
 {
   "compilerOptions": {
-    // File Layout
     "outDir": "./dist",
-    // Environment Settings
-
+    "rootDir": "./src",
     "target": "ES2020",
-    "lib": ["ES2020"],
+    "module": "ES2020",
     "moduleResolution": "node",
-
-    // Add Node types
-    "types": ["node"],
-
-    // Other Outputs
-    "sourceMap": true,
-    "declaration": true,
-    "declarationMap": true,
-
-    // Stricter Typechecking Options
-    "noUncheckedIndexedAccess": true,
-    "exactOptionalPropertyTypes": true,
-
-    // Recommended Options
-    "strict": true,
+    "lib": ["ES2020"],
     "esModuleInterop": true,
+    "strict": true,
     "skipLibCheck": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "forceConsistentCasingInFileNames": true
   },
-  "ts-node": {
-    "compilerOptions": {
-      "module": "commonjs",
-      "verbatimModuleSyntax": false
-    }
-  },
-  "include": ["src/**/*", "prisma/**/*"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
 }
